--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -171,6 +171,7 @@
             android:fontFamily="@font/product_sans_regular"
             android:hint="Enter your password"
             android:paddingLeft="8dp"
+            android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:paddingTop="12dp"
@@ -218,6 +219,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="63dp"
         android:layout_marginRight="20dp"
+        android:singleLine="true"
+        android:inputType="textEmailAddress"
         android:maxLines="1"
         app:layout_constraintTop_toBottomOf="@id/nameHeading"
         android:background="@drawable/edit_text_2"
