--- a/app/src/main/res/drawable/bottom_nav_view.xml
+++ b/app/src/main/res/drawable/bottom_nav_view.xml
@@ -5,8 +5,19 @@
             <gradient
                 android:angle="90"
                 android:endColor="#0000"
-                android:startColor="#ffffff"
+                android:startColor="#FFFFFF"
                 />
         </shape>
     </item>
+
+    <item android:state_pressed="true">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <gradient
+                android:angle="90"
+                android:endColor="@android:color/transparent"
+                android:startColor="#000000" />
+        </shape>
+    </item>
+
+
 </selector>
