--- a/app/src/main/res/drawable/like_background_round.xml
+++ b/app/src/main/res/drawable/like_background_round.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed = "false">
-        <shape android:shape = "rectangle">
-            <corners android:radius="8dp"/>
-            <solid android:color="#4282FF"/>
+        <shape android:shape = "rectangle" >
+            <corners android:radius="15dp"/>
+            <stroke android:width="5dp" android:color="#FB893D">
+            </stroke>
         </shape>
     </item>
 </selector>
