--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -240,7 +240,7 @@
             android:id="@+id/flatInfoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/flat_no"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
@@ -255,7 +255,7 @@
                 android:fontFamily="@font/satoshi_bold"
                 android:text="Add your flat’s pictures"
                 android:textColor="@color/black"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -341,7 +341,7 @@
                 android:fontFamily="@font/product_sans_bold"
                 android:text="Address"
                 android:textColor="#000000"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/photoInputLayout" />
 
@@ -454,7 +454,7 @@
                 android:fontFamily="@font/product_sans_bold"
                 android:text="Rent"
                 android:textColor="#000000"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/input_addInfo"/>
 
@@ -540,7 +540,7 @@
                 android:fontFamily="@font/product_sans_bold"
                 android:text="Your flat is"
                 android:textColor="#000000"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/input_monthlyAmount" />
 
@@ -601,7 +601,7 @@
                 android:fontFamily="@font/product_sans_bold"
                 android:text="Size of your flat"
                 android:textColor="#000000"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/radioInfo" />
 
@@ -656,7 +656,7 @@
                 android:fontFamily="@font/product_sans_bold"
                 android:text="Capacity"
                 android:textColor="#000000"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/input_size" />
 
@@ -729,7 +729,7 @@
                 android:fontFamily="@font/product_sans_bold"
                 android:text="Occupied"
                 android:textColor="#000000"
-                android:textSize="32dp"
+                android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/input_capacity" />
 
