--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
         app:menu="@menu/bottom_vav_menu"
         app:itemActiveIndicatorStyle="@color/black"
         app:labelVisibilityMode="unlabeled"
-        app:itemRippleColor="@color/white"
+        app:itemRippleColor="#FB893D"
         android:background="@drawable/bottom_nav_view"
         app:itemIconSize="35dp"
         />
