--- a/app/src/main/res/layout/options_popup.xml
+++ b/app/src/main/res/layout/options_popup.xml
@@ -10,8 +10,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            >
+            app:layout_constraintBottom_toBottomOf="parent">
+
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="200dp"
